--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,28 @@
-/* CSS crunched with Crunch - http://crunchapp.net/ */
-header{margin-top:30px;}
-.btn.demo{margin-right:20px;}
-h2 .label{vertical-align:4px;}
-textarea{height:330px;resize:none;font-family:Menlo,Monaco,"Courier New",monospace;font-size:11px;line-height:15px;}
-label.control-label{font-weight:bold;}
-footer{margin-bottom:30px;}footer a{margin-top:0;}
+.main {
+	margin-top: 50px;
+}
+h2 .label {
+	vertical-align:4px;
+}
+textarea {
+	height:425px;
+	resize:none;
+	font-family:Menlo,Monaco,"Courier New",monospace;
+	font-size:11px;
+	line-height:15px;
+}
+#input {
+	height:295px;
+}
+#variables {
+	height:75px;
+}
+label.control-label {
+	font-weight:bold;
+}
+footer {
+	margin-bottom:30px;
+}
+footer a {
+	margin-top:0;
+}
